GNOME Bugzilla – Bug 696652
GTask won't free its error member variable on finalize
Last modified: 2013-03-26 18:21:27 UTC
==1498== 120 (48 direct, 72 indirect) bytes in 3 blocks are definitely lost in loss record 7,370 of 9,001 ==1498== at 0x4A0887C: malloc (vg_replace_malloc.c:270) ==1498== by 0x7DBB78A: g_malloc (gmem.c:159) ==1498== by 0x7DD4031: g_slice_alloc (gslice.c:1003) ==1498== by 0x7D9C3C7: g_error_new_literal (gerror.c:456) ==1498== by 0x7D9C69F: g_set_error_literal (gerror.c:595) ==1498== by 0x7B9C37E: g_cancellable_set_error_if_cancelled (gcancellable.c:315) ==1498== by 0x7AFAA6C: io_run_until (soup-message-io.c:841) ==1498== by 0x7AFB047: soup_message_io_run_until_read (soup-message-io.c:963) ==1498== by 0x7B0D123: try_run_until_read (soup-session.c:3763) ==1498== by 0x7B0D0E1: read_ready_cb (soup-session.c:3753) ==1498== by 0x7AFA3B6: message_source_dispatch (soup-message-io.c:720) ==1498== by 0x7DB3414: g_main_dispatch (gmain.c:3054) ==1498== by 0x7DB4179: g_main_context_dispatch (gmain.c:3630) ==1498== by 0x7DB4369: g_main_context_iterate (gmain.c:3701) ==1498== by 0x7DB4799: g_main_loop_run (gmain.c:3895) ==1498== by 0x56A1EA3: WebProcessMainGtk (in /home/xan/gnome/lib64/libwebkit2gtk-3.0.so.22.2.0) ==1498== by 0x3C65021A04: (below main) (libc-start.c:225)
*** Bug 696644 has been marked as a duplicate of this bug. ***
Leak is actually in GTask itself, reassigning.
Created attachment 239888 [details] [review] gtask: free error on finalize if it's set
ACKed by danw on IRC, pushed to master.