gtask: free error on finalize if it's set

https://bugzilla.gnome.org/show_bug.cgi?id=696652